--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -453,140 +453,43 @@ input {
 
 
 .about2__data {
-
-
- text-align: center;
-
-
-}
-
-
-
-
-
-
+text-align: right;}
 
 .about2__container {
-
-
  row-gap: 2.5rem;
-
-
 }
-
-
-
-
-
-
 
 .about2__description {
-
-
  margin-bottom: var(--mb-2);
-
-
 }
-
-
-
-
-
-
 
 .about2__img {
-
-
  display: flex;
-
-
  column-gap: 1rem;
-
-
  align-items: center;
-
-
  justify-content: center;
-
-
 }
-
-
-
-
-
-
 
 .about2__img-overlay {
-
-
  overflow: var(--img-hidden);
-
-
 }
-
-
-
-
-
-
 
 .about2__img-one {
-
-
  width: 130px;
-
-
 }
-
-
-
-
-
-
 
 .about2__img-two {
-
-
  width: 180px;
-
-
 }
-
-
-
-
-
-
 
 .about2__img-one,
-
-
 .about2__img-two {
-
-
  transition: var(--img-transition);
-
-
 }
-
-
-
-
-
-
-
 .about2__img-one:hover,
-
-
 .about2__img-two:hover {
-
-
- transform: var(--img-scale);
-
-
+transform: var(--img-scale);
 }
-
 
 /*=============== DISCOVER ===============*/
 .discover__card {
