--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -449,7 +449,7 @@ input {
 
 /*=============== about2 ===============*/
 
-.section__title about2__title {
+.about2__title {
   text-align: right;}
 
 
