--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,9 +170,7 @@ input {
 .section__title {
   font-size: var(--h2-font-size);
   color: var(--title-color);
-  
-/*   text-align: center; */
-  
+    text-align: center;
   text-transform: capitalize;
   margin-bottom: var(--mb-2);
 }
