--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -449,16 +449,16 @@ input {
 
 /*=============== about2 ===============*/
 
-.about2__title h2{
-  text-align: right;}
+.about2__title{
+ align-content: right;}
 
-.section__title about2__title{
+/* .section__title about2__title{
   font-size: var(--h2-font-size);
   color: var(--title-color);
-  text-align: right;
+  text-align: center;
   text-transform: capitalize;
   margin-bottom: var(--mb-2);
-}
+} */
 
 .about2__data {
 text-align: right;}
