--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -450,7 +450,8 @@ input {
 /*=============== about2 ===============*/
 
 .about2__title{
- align-content: right;}
+ align-content: right;
+margin-bottom: var(--mb-2);}
 
 /* .section__title about2__title{
   font-size: var(--h2-font-size);
