--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -476,7 +476,7 @@ text-align: right;}
  display: flex;
  column-gap: 1rem;
  align-items: left;
- justify-content: left;
+ justify-content: center;
 }
 
 .about2__img-overlay {
