--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -475,8 +475,8 @@ text-align: right;}
 .about2__img {
  display: flex;
  column-gap: 1rem;
- align-items: left;
- justify-content: center;
+ align-items: center;
+ justify-content: left;
 }
 
 .about2__img-overlay {
