--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -477,7 +477,7 @@ text-align: right;}
  display: flex;
  column-gap: 1rem;
  align-items: left;
- justify-content: center;
+ justify-content: left;
 }
 
 .about2__img-overlay {
@@ -980,6 +980,24 @@ transform: var(--img-scale);
   .about__description {
     margin-bottom: var(--mb-2);
   }
+  
+  
+/*   not sure */
+    .about2__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+  .about2__data, .about2__title {
+    text-align: initial;
+  }
+  .about2__title {
+    margin-bottom: var(--mb-1-5);
+  }
+  .about2__description {
+    margin-bottom: var(--mb-2);
+  }
+  
+  
   .discover__container {
     width: 610px;
     margin-left: auto;
