--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -981,6 +981,20 @@ transform: var(--img-scale);
     margin-bottom: var(--mb-2);
   }
   
+   .about2__container {
+    grid-template-columns: repeat(1fr, 2);
+    align-items: center;
+  }
+  .about2__data, .about2__title {
+    text-align: initial;
+  }
+  .about2__title {
+    margin-bottom: var(--mb-1-5);
+  }
+  .about2__description {
+    margin-bottom: var(--mb-2);
+  }
+  
   .discover__container {
     width: 610px;
     margin-left: auto;
