--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -469,6 +469,7 @@ align-items: right;
 .about2__container {
  row-gap: 500rem;
  display: flex;
+  align-content: right;
 }
 
 .about2__description {
