--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -451,6 +451,7 @@ input {
 
 .about2__title{
  align-content: right;
+justify-content: right;
 margin-bottom: var(--mb-2);}
 
 /* .section__title about2__title{
@@ -987,6 +988,7 @@ transform: var(--img-scale);
    .about2__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: right;
+    justify-content: right;
   }
   .about2__data, .about2__title {
     text-align: initial;
