--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -36,7 +36,7 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #203656;
+    color: F4ABC4;
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     line-height: 1.4;
@@ -51,7 +51,7 @@ a {
 }
 
 a:hover {
-    color: #203656;
+    color: #FFDD93;
 }
 
 a:focus {
