--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -419,7 +419,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li.openmenu>a {
-    color: #203656;
+    color: #8EBCFC;
 }
 
 .canvas-menu .vertical-menu li.openmenu .switch {
@@ -434,7 +434,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li a {
-    color: #203656;
+    color: #8EBCFC;
     font-family: "Poppins", sans-serif;
     font-size: 14px;
     font-weight: 400;
@@ -462,7 +462,7 @@ button:focus {
 }
 
 .canvas-menu .vertical-menu li.active .submenu a:hover {
-    color: #203656;
+    color: #8EBCFC;
 }
 
 .canvas-menu .submenu {
