--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -604,7 +604,7 @@ section {
 
 .hero::after {
     content: "";
-    background: #203656;
+    background: #D8B9C3;
     display: block;
     left: 0;
     opacity: 0.8;
@@ -653,7 +653,7 @@ section {
 }
 
 .post .post-title a {
-    color: #203656;
+    color: #D8B9C3;
 }
 
 .post .post-title a:hover {
@@ -716,7 +716,7 @@ section {
 
 .featured-post-lg .thumb::after {
     content: "";
-    background: #203656;
+    background: #D8B9C3;
     display: block;
     height: 100%;
     left: 0;
@@ -1037,7 +1037,7 @@ section {
 
 .post.post-over-content .thumb::after {
     content: "";
-    background: #203656;
+    background: #D8B9C3;
     display: block;
     height: 100%;
     left: 0;
@@ -1263,7 +1263,7 @@ section {
 }
 
 .widget ul.list li a {
-    color: #203656;
+    color: #D8B9C3;
     font-weight: 700;
 }
 
@@ -1303,7 +1303,7 @@ section {
 .newsletter-headline {
     font-size: 15px;
     font-weight: bold;
-    color: #203656;
+    color: #D8B9C3;
     display: block;
 }
 
