--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -627,7 +627,7 @@ section {
     top: 20px;
     z-index: 1;
     background-color: #6e72fc;
-    background-image: linear-gradient(315deg, #6e72fc 0%, #D8B9C3 74%);
+    background-image: linear-gradient(315deg, #6e72fc 0%, #394154 74%);
     background-size: 200% auto;
     transition: all 0.3s ease-in-out;
 }
