--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -1039,7 +1039,7 @@ section {
 
 .post.post-over-content .thumb::after {
     content: "";
-    background: #D8B9C3;
+    background: #394154;
     display: block;
     height: 100%;
     left: 0;
