--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -128,7 +128,7 @@ body.down .header-default.clone {
     background: #6a3093;
     border-radius: 25px;
     background-color: #6e72fc;
-    background-image: linear-gradient(315deg, #6e72fc 0%, #D8B9C3 74%);
+    background-image: linear-gradient(315deg, #6e72fc 0%, #394154 74%);
 }
 
 .navbar-brand {
