--- a/blog/blogstyle.css
+++ b/blog/blogstyle.css
@@ -1481,3 +1481,7 @@ footer .footer-inner .copyright {
         font-size: 16px;
     }
 }
+ .textmaterial h6
+    {
+       color: ##E9E9E9;
+    }
