--- a/blog/text/textstyle.css
+++ b/blog/text/textstyle.css
@@ -1483,5 +1483,21 @@ footer .footer-inner .copyright {
 }
  .textmaterial h6
     {
-       color: ##E9E9E9;
+       color: #E9E9E9;
     }
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+  div.example {
+    font-size: 80px;
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  .textarea p {
+    font-size: 1rem;
+  }
+     .textarea h2 {
+    font-size: 3rem;
+  }
+}
