--- a/blog/text/textstyle.css
+++ b/blog/text/textstyle.css
@@ -1483,7 +1483,7 @@ footer .footer-inner .copyright {
 }
  .textmaterial h6
     {
-       color: #E9E9E9;
+       color: #FEF6D6 ;
     }
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
