--- a/blog/text/textstyle.css
+++ b/blog/text/textstyle.css
@@ -1485,6 +1485,11 @@ footer .footer-inner .copyright {
     {
        color: #D0D0CE  ;
     }
+.textmaterial h5
+    {
+       color: #EEB3C9  ;
+    }
+
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
   div.example {
