--- a/blog/text/textstyle.css
+++ b/blog/text/textstyle.css
@@ -1487,7 +1487,7 @@ footer .footer-inner .copyright {
     }
 .textmaterial h5
     {
-       color: #EEB3C9  ;
+       color: #00000  ;
     }
 
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
