--- a/blog/text/textstyle.css
+++ b/blog/text/textstyle.css
@@ -1485,7 +1485,7 @@ footer .footer-inner .copyright {
     {
        color: #D0D0CE  ;
     }
-.textmaterial h5
+.textmaterial span h5
     {
        color: #00000  ;
     }
